[package]
name = "sb3-builder"
version = "0.1.0"
edition = "2021"
description = "A library for programmatically generating Scratch projects"
license = "Unlicense"
repository = "https://github.com/Johan-Mi/sb3-builder"
keywords = ["utility", "encoding", "library", "scratch"]
categories = ["encoding"]

[lints]
rust.unsafe_code = "deny"
clippy.nursery = "warn"
clippy.pedantic = "warn"
clippy.cargo = "warn"
clippy.unwrap_used = "warn"

[dependencies]
md5 = { version = "0.7.0", default-features = false }
serde = { version = "1.0.219", default-features = false }
serde_derive = "1.0.219"
serde_json = "1.0.108"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
