[package]
name = "sb3-builder"
version = "0.1.0"
edition = "2021"
description = "A library for programmatically generating Scratch projects"
license = "Unlicense"
repository = "https://github.com/Johan-Mi/sb3-builder"
keywords = ["utility", "encoding", "library", "scratch"]
categories = ["encoding"]

[lints]
rust.unsafe_code = "deny"
clippy.nursery = { level = "warn", priority = -1 }
clippy.pedantic = { level = "warn", priority = -1 }
clippy.cargo = { level = "warn", priority = -1 }
clippy.unwrap_used = "warn"
clippy.todo = "deny"

[dependencies]
md5 = { version = "0.7.0", default-features = false }
serde = { version = "1.0.219", default-features = false }
serde_json = "1.0.108"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
