[package]
name = "sb3-builder"
version = "0.1.0"
edition = "2021"
description = "A library for programmatically generating Scratch projects"
license = "Unlicense"
repository = "https://github.com/Johan-Mi/sb3-builder"
keywords = ["utility", "encoding", "library", "scratch"]
categories = ["encoding"]

[lints]
rust.unsafe_code = "deny"
rust.unused_results = "deny"
clippy.cargo = { level = "warn", priority = -1 }
clippy.let_underscore_untyped = "deny"
clippy.nursery = { level = "warn", priority = -1 }
clippy.pedantic = { level = "warn", priority = -1 }
clippy.todo = "deny"
clippy.unwrap_used = "warn"

[dependencies]
flate2 = "1.1.2"
md5 = { version = "0.7.0", default-features = false }
rawzip = "0.4.0"
